{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 17,
  "lineage": "3aaff589-5a1a-2420-dad2-3fa6ce04bbc7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dove-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:168226207491:instance/i-03e7664e3c2da98b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e7664e3c2da98b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dovekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2b1ad1808727359",
            "private_dns": "ip-10-0-1-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-52-87-204-51.compute-1.amazonaws.com",
            "public_ip": "52.87.204.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f843612a308d383c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015143da63cea967b",
            "tags": {
              "Name": "dovetest-instance",
              "project": "terradata"
            },
            "tags_all": {
              "Name": "dovetest-instance",
              "project": "terradata"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0475e243b5f109b35"
            ]
          },
          "dependencies": [
            "aws_key_pair.dove-key",
            "aws_security_group.dove_sg",
            "aws_subnet.dove-pub-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:internet-gateway/igw-0d42f70462f94210f",
            "id": "igw-0d42f70462f94210f",
            "owner_id": "168226207491",
            "tags": {
              "Name": "dove-IGW"
            },
            "tags_all": {
              "Name": "dove-IGW"
            },
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:route-table/rtb-0faa5a9484ae9eae8",
            "id": "rtb-0faa5a9484ae9eae8",
            "owner_id": "168226207491",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d42f70462f94210f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example"
            },
            "tags_all": {
              "Name": "example"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3cc9b67dc4b48e6",
            "route_table_id": "rtb-0faa5a9484ae9eae8",
            "subnet_id": "subnet-015143da63cea967b"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0667dfe5dfe5d6cce",
            "route_table_id": "rtb-0faa5a9484ae9eae8",
            "subnet_id": "subnet-0646bf39cb7adbe03"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:security-group/sg-0475e243b5f109b35",
            "description": "ssh grp for dove ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0475e243b5f109b35",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dove-sg",
            "name_prefix": "",
            "owner_id": "168226207491",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "tags_all": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:subnet/subnet-0e165960b825b1116",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e165960b825b1116",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "168226207491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-1"
            },
            "tags_all": {
              "Name": "dove-priv-1"
            },
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:subnet/subnet-01d453d5dc9e72c2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d453d5dc9e72c2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "168226207491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-priv-2"
            },
            "tags_all": {
              "Name": "dove-priv-2"
            },
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:subnet/subnet-015143da63cea967b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015143da63cea967b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "168226207491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-1"
            },
            "tags_all": {
              "Name": "dove-pub-1"
            },
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:subnet/subnet-0646bf39cb7adbe03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0646bf39cb7adbe03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "168226207491",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dove-pub-2"
            },
            "tags_all": {
              "Name": "dove-pub-2"
            },
            "vpc_id": "vpc-0a7073db4b11a5b56"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:168226207491:vpc/vpc-0a7073db4b11a5b56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02feb844da5a58c5e",
            "default_route_table_id": "rtb-07ff836d4cb64b9fe",
            "default_security_group_id": "sg-03f06fbb306a9cfd6",
            "dhcp_options_id": "dopt-6437111e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a7073db4b11a5b56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ff836d4cb64b9fe",
            "owner_id": "168226207491",
            "tags": {
              "Name": "dove"
            },
            "tags_all": {
              "Name": "dove"
            }
          }
        }
      ]
    }
  ]
}